edited according to codereview

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                             <img class="greeting__image" src="IMG/burger.png" alt="Mr.Burger">
                         </div>
                         <div class="greeting__words">
-                            <div class="greeting__words-gagalin"><h2>Мы делаем </h2></div>
-                            <div class="greeting__words-lifehack"><p>натуральные  бургеры</p></div>
+                            <div class="greeting__words-gagalin"><h2>Мы делаем</h2></div>
+                            <div class="greeting__words-lifehack"><p>натуральные бургеры</p></div>
                         </div>
                     </div>
                     <aside  class="dots">
@@ -85,7 +85,7 @@
                     </header>
                     <div class="webest-content">
                         <div class="bestpoint">
-                            <div class="bestpoint__img bestpoint__img--meat">
+                            <div class="bestpoint__img bestpoint__img_meat">
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                      width="96.428px" height="89.246px" viewBox="0 0 96.428 89.246" enable-background="new 0 0 96.428 89.246" xml:space="preserve">
                                 <g>
@@ -303,8 +303,8 @@
                             <div class="bestpoint__text"><p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p></div>
                         </div>
                         <div class="bestpoint">
-                            <div class="bestpoint__img bestpoint__img--hand">
-                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            <div class="bestpoint__img bestpoint__img_hand">
+                                <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  width="73px" height="85.875px" viewBox="0 0 73 85.875" enable-background="new 0 0 73 85.875" xml:space="preserve">
                                 <g>
                                 <path fill-rule="evenodd" clip-rule="evenodd" fill="#F9B43B" d="M10.708,60.967l2.087-0.408c0.2-0.034,0.268-0.148,0.235-0.334
@@ -1290,8 +1290,8 @@
                             <div class="bestpoint__text"><p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p></div>
                         </div>
                         <div class="bestpoint">
-                            <div class="bestpoint__img bestpoint__img--natural">
-                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            <div class="bestpoint__img bestpoint__img_natural">
+                                <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                      width="88px" height="75.534px" viewBox="0 0 88 75.534" enable-background="new 0 0 88 75.534" xml:space="preserve">
                                 <g>
                                     <path fill-rule="evenodd" clip-rule="evenodd" fill="#8BC03F" d="M60.186,71.927c0.563-0.721,0.885-1.131,1.098-1.406
@@ -1503,25 +1503,41 @@
             </section>
 
             <section class="section feedbacks">
-                <div class="container opinion-container">
+                <div class="opinion-container">
                     <div class="opinion">
-                        <div class="opinion__img">
-                            <img src="IMG6/1.png" alt="Фото">
+                        <div class="opinion__img opinion__img_1">
                             <div class="opinion__content">
-                                <div class="opinion__title"></div>
-                                <div class="opinion__text"></div>
-                                <div class="btn"></div>
-                            </div>
-                            
-                        </div>
-                    </div>
-                    <div class="opinion">
-                        <div class="opinion__img">
-                            <img src="IMG6/2.png" alt="Фото">
-                            <div class="opinion__content">
-                                <div class="opinion__title">
-                                    <p>Константин Спилберг</p>
+                                <h5 class="opinion__title">Константин Спилберг</h5>
+                                <div class="opinion__text">
+                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                                 </div>
+                                <div class="opinion_btn">Подробнее</div>
+                            </div>
+                        </div>
+
+                        <div class="opinion__img opinion__img_2">
+                            <div class="opinion__content">
+                                <h5 class="opinion__title">Константин Спилберг</h5>
+                                <div class="opinion__text">
+                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                </div>
+                                <div class="opinion_btn">Подробнее</div>
+                            </div>
+                        </div>
+
+                        <div class="opinion__img opinion__img_3">
+                            <div class="opinion__content">
+                                <h5 class="opinion__title">Константин Спилберг</h5>
+                                <div class="opinion__text">
+                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                </div>
+                                <div class="opinion_btn">Подробнее</div>
+                            </div>
+                        </div>
+
+                        <div class="opinion__img opinion__img_4">
+                            <div class="opinion__content">
+                                <h5 class="opinion__title">Константин Спилберг</h5>
                                 <div class="opinion__text">
                                     <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                                 </div>
@@ -1529,64 +1545,48 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="opinion">
-                        <div class="opinion__img">
-                            <img src="IMG6/3.png" alt="Фото">
+                        <div class="opinion__img opinion__img_5">
+                            <div class="opinion__content">
+                                <h5 class="opinion__title">Константин Спилберг</h5>
+                                <div class="opinion__text">
+                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                </div>
+                                <div class="opinion_btn">Подробнее</div>
+                            </div>
                         </div>
-                        <div class="opinion__content">
-                            <div class="opinion__title"></div>
-                            <div class="opinion__text"></div>
-                            <div class="btn"></div>
+
+
+                        <div class="opinion__img opinion__img_6">
+                            <div class="opinion__content">
+                                <h5 class="opinion__title">Константин Спилберг</h5>
+                                <div class="opinion__text">
+                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                </div>
+                                <div class="opinion_btn">Подробнее</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="opinion">
-                        <div class="opinion__img">
-                            <img src="IMG6/4.png" alt="Фото">
+
+
+                        <div class="opinion__img opinion__img_7">
+                            <div class="opinion__content">
+                                <h5 class="opinion__title">Константин Спилберг</h5>
+                                <div class="opinion__text">
+                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                </div>
+                                <div class="opinion_btn">Подробнее</div>
+                            </div>
                         </div>
-                        <div class="opinion__content">
-                            <div class="opinion__title"></div>
-                            <div class="opinion__text"></div>
-                            <div class="btn"></div>
-                        </div>
-                    </div>
-                    <div class="opinion">
-                        <div class="opinion__img">
-                            <img src="IMG6/5.png" alt="Фото">
-                        </div>
-                        <div class="opinion__content">
-                            <div class="opinion__title"></div>
-                            <div class="opinion__text"></div>
-                            <div class="btn"></div>
-                        </div>
-                    </div>
-                    <div class="opinion">
-                        <div class="opinion__img">
-                            <img src="IMG6/6.png" alt="Фото">
-                        </div>
-                        <div class="opinion__content">
-                            <div class="opinion__title"></div>
-                            <div class="opinion__text"></div>
-                            <div class="btn"></div>
-                        </div>
-                    </div>
-                    <div class="opinion">
-                        <div class="opinion__img">
-                            <img src="IMG6/7.png" alt="Фото">
-                        </div>
-                        <div class="opinion__content">
-                            <div class="opinion__title"></div>
-                            <div class="opinion__text"></div>
-                            <div class="btn"></div>
-                        </div>
-                    </div>
-                    <div class="opinion">
-                        <div class="opinion__img">
-                            <img src="IMG6/8.png" alt="Фото">
-                        </div>
-                        <div class="opinion__content">
-                            <div class="opinion__title"></div>
-                            <div class="opinion__text"></div>
-                            <div class="btn"></div>
+
+                        <div class="opinion__img opinion__img_8">
+                            <div class="opinion__content">
+                                <h5 class="opinion__title">Константин Спилберг</h5>
+                                <div class="opinion__text">
+                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                </div>
+                                <div class="opinion_btn">Подробнее</div>
+                            </div>
                         </div>
                     </div>
                 </div>
