added section team

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class="greeting__words">
                             <div class="greeting__words-gagalin"><h2>Мы делаем</h2></div>
-                            <div class="greeting__words-lifehack"><p>натуральные бургеры</p></div>
+                            <div class="greeting__words-lifehack"><p>натуральные  бургеры</p></div>
                         </div>
                     </div>
                     <aside  class="dots">
@@ -1497,6 +1497,82 @@
                             <h4 class="bestpoint__title">Натуральные <br>
                             ингредиенты</h4>
                             <div class="bestpoint__text"><p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section team">  
+                <div class="container team-bg">
+                    <div class="teammates-bg">
+                        <div class="teammates">
+                            <h2 class="teammates__title">Команда</h2>
+                            <div class="teammates__accordeon">
+                                <ul class="teammates__list">
+                                    <li class="teammates__item">
+                                        <a href="#" class="teammates__trigger">
+                                            <div class="teammates__heading">
+                                                <img src="IMG4/polygon-1.svg" alt="\/" class="teammates__icon">
+                                                <h5 class="teammates__name">Ричард Джеймс
+                                            </div>
+                                        </a>
+                                        <div class="teammates__desc">
+                                            <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
+                                            <div class="teammates__text">
+                                                <h6 class="teammates__job">Оператор </h6>
+                                                <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="teammates__trigger teammates__trigger_active">
+                                            <div class="teammates__heading">
+                                                <img src="IMG4/polygon-1.svg" alt="\/" class="teammates__icon">
+                                                <h5 class="teammates__name">Ричард Джеймс
+                                            </div>
+                                        </a>
+                                        <div class="teammates__desc">
+                                            <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
+                                            <div class="teammates__text">
+                                                <h6 class="teammates__job">Оператор </h6>
+                                                <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="teammates__trigger">
+                                            <div class="teammates__heading">
+                                                <img src="IMG4/polygon-1.svg" alt="\/" class="teammates__icon">
+                                                <h5 class="teammates__name">Ричард Джеймс
+                                            </div>
+                                        </a>
+                                        <div class="teammates__desc">
+                                            <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
+                                            <div class="teammates__text">
+                                                <h6 class="teammates__job">Оператор </h6>
+                                                <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="teammates__trigger">
+                                            <div class="teammates__heading">
+                                                <img src="IMG4/polygon-1.svg" alt="\/" class="teammates__icon">
+                                                <h5 class="teammates__name">Ричард Джеймс
+                                            </div>
+                                        </a>
+                                        <div class="teammates__desc">
+                                            <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
+                                            <div class="teammates__text">
+                                                <h6 class="teammates__job">Оператор </h6>
+                                                <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                            </div>
+                                        </div>
+                                    </li>
+                                            
+                                            
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
