--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             </section>
-
+            
             <section class="section webest">
                 <div class="container webest-bg">
                     <header class="webest-header">
@@ -117,6 +117,12 @@
                     </ul>
                 </div>
             </section>
+
+            <section class="section webest">
+                <div class="container webest-bg">
+                </div> 
+            </section>
+
 
             <section class="section team">  
                 <div class="container team-bg">
@@ -375,7 +381,7 @@
                             </div>
                             <div class="orderform__row"> 
                                 <input type="submit" class="order-btn" value="Заказать">
-                                <button type="reset" class="reset-btn" value="Сброс">Сброс</button>
+                                <button type="reset" class="reset-btn" value="Сброс">Сбросить</button>
 
                             </div>
                         </div>
@@ -401,10 +407,10 @@
                                         <use xlink:href="CSS/sprite/sprite.svg#fb"/>
                                 </svg></a>
                                 <a href="#" class="socials__link"><svg  width="20px" height="20px" class="socials__item">
-                                        <use xlink:href="CSS/sprite/sprite.svg#twitter"/>
+                                        <use xlink:href="CSS/sprite/sprite.svg#inst"/>
                                 </svg></a>
                                 <a href="#" class="socials__link"><svg  width="20px" height="16px" class="socials__item">
-                                        <use xlink:href="CSS/sprite/sprite.svg#inst"/>
+                                        <use xlink:href="CSS/sprite/sprite.svg#twitter"/>
                                 </svg></a>
                             </div>
                         </div>
