--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             </section>
 
             <section class="order section">
-                <div class="order-bg container">
+                <div class=" container order-bg">
                     <h2 class="order__title"> Закажите доставку</h2>
                     <form action="order.php" method="post" class="orderform">
                         <div class="orderform__left">
@@ -394,7 +394,7 @@
             </section>
 
             <section class="section map">
-                <div class="container map-bg">
+                <div class="map-bg">
                     <footer class="footer">
                         <div class="footer__left">
                             <address class="address">
