--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                 </div>
             </section>
 
-            <section class="section webest">
+<!--             <section class="section webest">
                 <div class="container webest-bg">
                 </div> 
-            </section>
+            </section> -->
 
 
             <section class="section team">  
@@ -240,7 +240,8 @@
                             <div class="opinion__text">
                                 <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             </div>
-                            <div class="opinion_btn">Подробнее</div>
+                            <div class="opinion__btn">Подробнее</div>
+                            <div class="opinion__btn opinion__btn_more">Читать отзыв</div>
                         </div>
                     </div>
 
@@ -250,7 +251,8 @@
                             <div class="opinion__text">
                                 <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             </div>
-                            <div class="opinion_btn">Подробнее</div>
+                            <div class="opinion__btn">Подробнее</div>
+                            <div class="opinion__btn opinion__btn_more">Читать отзыв</div>
                         </div>
                     </div>
 
@@ -260,7 +262,8 @@
                             <div class="opinion__text">
                                 <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             </div>
-                            <div class="opinion_btn">Подробнее</div>
+                            <div class="opinion__btn">Подробнее</div>
+                            <div class="opinion__btn opinion__btn_more">Читать отзыв</div>
                         </div>
                     </div>
 
@@ -270,7 +273,8 @@
                             <div class="opinion__text">
                                 <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             </div>
-                            <div class="opinion_btn">Подробнее</div>
+                            <div class="opinion__btn">Подробнее</div>
+                            <div class="opinion__btn opinion__btn_more">Читать отзыв</div>
                         </div>
                     </div>
 
@@ -280,7 +284,8 @@
                             <div class="opinion__text">
                                 <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             </div>
-                            <div class="opinion_btn">Подробнее</div>
+                            <div class="opinion__btn">Подробнее</div>
+                            <div class="opinion__btn opinion__btn_more">Читать отзыв</div>
                         </div>
                     </div>
 
@@ -290,7 +295,8 @@
                             <div class="opinion__text">
                                 <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             </div>
-                            <div class="opinion_btn">Подробнее</div>
+                            <div class="opinion__btn">Подробнее</div>
+                            <div class="opinion__btn opinion__btn_more">Читать отзыв</div>
                         </div>
                     </div>
 
@@ -300,7 +306,8 @@
                             <div class="opinion__text">
                                 <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             </div>
-                            <div class="opinion_btn">Подробнее</div>
+                            <div class="opinion__btn">Подробнее</div>
+                            <div class="opinion__btn opinion__btn_more">Читать отзыв</div>
                         </div>
                     </div>
 
@@ -310,7 +317,8 @@
                             <div class="opinion__text">
                                 <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             </div>
-                            <div class="opinion_btn">Подробнее</div>
+                            <div class="opinion__btn">Подробнее</div>
+                            <div class="opinion__btn opinion__btn_more">Читать отзыв</div>
                         </div>
                     </div>
                     
