added closing tag menu-bg

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                             </li>
                         </ul>
                     </div>
+                </div>
             </section>
 
 
@@ -429,6 +430,7 @@
                     </footer>
                 </div>
             </section>
+            
             <aside  class="dots">
                 <ul class="dots__list">
                     <li class="dots__item dots__item_active"><a href="#"></a></li>
