--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <img class="greeting__image" src="IMG/burger-drops.png" alt="Mr.Burger">
                         </div>
                         <div class="greeting__words">
-                            <div class="greeting__words-gagalin"><h2>Мы делаем</h2></div>
+                            <h2 class="greeting__words-gagalin">Мы делаем</h2>
                             <div class="greeting__words-lifehack"><p>натуральные  бургеры</p></div>
                         </div>
                     </div>
@@ -404,6 +404,7 @@
 
             <section class="section map">
                 <div class="map-bg">
+                    <h2 class="map-title">Карта ресторанов</h2>
                     <footer class="footer">
                         <div class="footer__left">
                             <address class="address">
