added slider section

--- a/index.html
+++ b/index.html
@@ -97,9 +97,6 @@
                             </ul>
                         </div>
                     </div>
-
-
-                
             </section>
             
             <section class="section webest">
@@ -149,10 +146,62 @@
                 </div>
             </section>
 
-<!--             <section class="section webest">
-                <div class="container webest-bg">
+            <section class="section slider-bg">
+                <div class="container slider">
+                    <div class="slider__left">
+                        <div class="arrow arrow__left">
+                            <a href="#" class="arrow__link">
+                                <svg class="arrow__icon">
+                                    <use xlink:href="CSS/sprite/sprite.svg#arrow-scroll"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="slider__main">
+                        <div class="slider__composition">
+                            <div class="slider__burger">
+                                <svg class="slider__burgericon">
+                                    <use xlink:href="CSS/sprite/sprite.svg#burger"/>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="slider__kcal">
+                            <div class="slider__kettlebell">
+                                <svg class="slider__kcalicon">
+                                    <use xlink:href="CSS/sprite/sprite.svg#kkal"/>
+                                </svg>
+                            </div>
+                            <div class="slider__amount">1200
+                            </div>
+                        </div>
+
+                        <div class="slider__image">
+                            <img src="IMG3/black.png" alt="Бургер с чернилами" class="slider__img">
+                        </div>
+
+                        <div class="slider__content">
+                            <h2 class="slider__title">Dark Beef Burger</h2>
+                            <div class="slider__desc"><p>
+                                Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско
+                            </p></div>
+                            <div class="slider__bottom">
+                                <div class="slider__price">500</div>
+                                <div class="slider__order"><a href="#" data-scroll-to="6" class="order-btn">Заказать</a></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slider__right">
+                        <div class="arrow arrow__right">
+                            <a href="#" class="arrow__link">
+                                <svg class="arrow__icon">
+                                    <use xlink:href="CSS/sprite/sprite.svg#arrow-scroll"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
                 </div> 
-            </section> -->
+            </section>
 
 
             <section class="section team">  
